--- a/_extensions/vangberg/ankivalenz/_extension.yml
+++ b/_extensions/vangberg/ankivalenz/_extension.yml
@@ -1,8 +1,9 @@
 title: Ankivalenz
 author: Harry Vangberg
-version: 1.0.0
+version: 0.5.0
 quarto-required: ">=1.2.0"
 contributes:
   formats:
     html:
       minimal: true
+      output-ext: "ahtml"
